--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Materialize project 3</title>
+    <title>Dashboard Admin</title>
     <link href="images/materializecss-svgrepo-com.svg" rel="icon">
     <meta name="viewport" content="width=device-width ,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
